syntax = "proto3";

option go_package = ".";

package chat;

service Chat {
  rpc PutMsg(PutMsgReq) returns (PutMsgResp) {}
  rpc GetMsgs(GetMsgsReq) returns (stream GetMsgsResp) {}
}

message Pin {
  uint64 seqNum = 1;
  bytes hash = 2;
}

message Msg {
  string sender = 1;
  string body = 2;
  repeated Pin pins = 3;
}

message MsgWrap {
  Msg msg = 1;
  bytes hash = 2;
  bytes sig = 3;
  uint64 seqNum = 4;
}

message PutMsgReq { MsgWrap msg = 1; }

message PutMsgResp { }

message GetMsgsReq { string sender = 1; }

message GetMsgsResp { MsgWrap msg = 1; }

// UserKey used for serializing pre-generated pub/priv keys.
message UserKey {
  string name = 1;
  bytes privKey = 2;
  bytes pubKey = 3;
}

message ManyUserKeys { repeated UserKey userKeys = 1; }
